--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Eza's Portfolio</title>
@@ -42,7 +37,7 @@
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/eza-sarwar" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/dashboard" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/EzaSarwar" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -53,11 +48,11 @@
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="https://github.com/EzaSarwar/ProjectPortfolio_Eza/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql">Data Cleaning in SQL<br /></a></h2>
-									<p>This SQL project meticulously cleans the Nashville Housing dataset by standardizing date formats, resolving missing property addresses, transforming binary indicators, and removing duplicates.The project also involves transforming binary indicators like "Sold as Vacant" from 'Y' and 'N' to 'Yes' and 'No.' Additionally, duplication removal strategies, such as the use of ROW_NUMBER(), ensure data consistency. The process concludes with the removal of unused columns, streamlining the dataset for more efficient and meaningful analysis. The streamlined dataset promotes enhanced analysis and insights.</p>
+									<p>This SQL project cleans the Nashville Housing dataset by standardizing date formats, resolving missing property addresses, transforming binary indicators, and removing duplicates.The project also involves transforming binary indicators like "Sold as Vacant" from 'Y' and 'N' to 'Yes' and 'No.' Additionally, duplication removal strategies, such as the use of ROW_NUMBER(), ensure data consistency. The process concludes with the removal of unused columns, streamlining the dataset for more efficient and meaningful analysis. The streamlined dataset promotes enhanced analysis and insights.</p>
 								</header>
-								<a href="https://github.com/EzaSarwar/ProjectPortfolio_Eza/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql" class="image main"><img src="images/housing.jpg" alt="" /></a>
+								<a href="https://github.com/EzaSarwar/ProjectPortfolio_Eza/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql" class="image main"><img src="images/housing.jpeg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/EzaSarwar/ProjectPortfolio_Eza/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql" class="button large">View Project</a></li>
+									<li><a href="https://github.com/EzaSarwar/ProjectPortfolio_Eza/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql" class="button">View Project</a></li>
 								</ul>
 							</article>
 
@@ -91,7 +86,7 @@
 										<h2><a href="https://github.com/EzaSarwar/Urdu-Language-Recognition-System/blob/main/Thesis-%20Urdu%20Language%20Recognition%20System.pdf">Urdu Language Recognition System<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/EzaSarwar/Urdu-Language-Recognition-System/blob/main/Thesis-%20Urdu%20Language%20Recognition%20System.pdf" class="image fit"><img src="images/ULRS.jpg" alt="" /></a>
+									<a href="https://github.com/EzaSarwar/Urdu-Language-Recognition-System/blob/main/Thesis-%20Urdu%20Language%20Recognition%20System.pdf" class="image fit"><img src="images/ULRS.JPG" alt="" /></a>
 									<p>This project focuses on font-independent recognition of printed text in Urdu. This system has the ability to grab text from image including both actual photos you have taken and screenshots of Machine Printed text you have captured. The purpose of this project is to recognise text in scanned documents, text images and any picture taken by an android based device in order to reuse it later. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/EzaSarwar/Urdu-Language-Recognition-System/blob/main/Thesis-%20Urdu%20Language%20Recognition%20System.pdf" class="button">View Project</a></li>
